done input lectur

--- a/head/basic.html
+++ b/head/basic.html
@@ -24,7 +24,7 @@
 			This is a <br />
 			paragraph with a line break.
 		</p> -->
-		<p>means the same as</p>
+		<p>means the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as</p>
 			<p id="wasim">Hai</p>
         <script src="basic.js"></script>
 		<a href="https://www.w3schools.com">Visit W3Schools</a>
