--- a/head/basic.html
+++ b/head/basic.html
@@ -1,22 +1,22 @@
 <html>
-	<head>
-		<title>Quickly learn</title>
-		<meta charset="utf-8" />
-		<meta name="author" content="wasim" />
-		<meta http-equiv="refresh" content="423487243;equiv.html" />
-		<meta
-			name="description"
-			content="You can learn html by using this website. here wer 
-        tell some basics of html"
-		/>
-		<meta name="keywords" content="learn html, basic html" />
-		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<!--Comments-->
-		<link rel="icon" href="example.png" />
-		<!-- <link rel="stylesheet" href="style.css"/> -->
-	</head>
-	<body>
-		<!-- <h1>This is used to check whether the viewport is working properly or not</h1>
+
+<head>
+    <title>Quickly learn</title>
+    <meta charset="utf-8" />
+    <meta name="author" content="wasim" />
+    <meta http-equiv="refresh" content="277777;www.facebook.com" />
+    <meta name="description" content="You can learn html by using this website. here wer 
+        tell some basics of html" />
+    <meta name="keywords" content="learn html, basic html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--Comments-->
+    <link rel="icon" href="example.png" />
+
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <!-- <h1>This is used to check whether the viewport is working properly or not</h1>
 		<p>This is a paragraph without a line break.</p>
 		<br />
 		<p>This is a paragraph without a line break.</p>
@@ -24,11 +24,18 @@
 			This is a <br />
 			paragraph with a line break.
 		</p> -->
-		<p>means the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as</p>
-			<p id="wasim">Hai</p>
-        <script src="basic.js"></script>
-		<a href="https://www.w3schools.com">Visit W3Schools</a>
-			  <img   src="https://picsum.photoss/200" height="1000" width="100" alt="something went wrong" />
-		</p>
-	</body>
+    <p>means the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans the
+        same asmeans the same asmeans the same asmeans the same asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as means the same
+        asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans
+        the same asmeans the same asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as means the same asmeans the same asmeans the
+        same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same
+        asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans
+        the same asmeans the same asmeans the same asmeans the same asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as</p>
+    <!-- <p id="wasim">Hai</p> -->
+    <!-- <script src="basic.js"></script> -->
+    <!-- <a href="https://www.w3schools.com">Visit W3Schools</a> -->
+    <!-- <img src="https://picsum.photoss/200" height="1000" width="100" alt="something went wrong" /> -->
+    </p>
+</body>
+
 </html>
