--- a/input/index.html
+++ b/input/index.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
 <html>
-	<body>
-		<h2>HTML Forms</h2>
 
-		<form action="" method="get">
-			<label for="fname">First name:</label><br />
-			<input type="text" id="fname" name="fname" value="John"   /><br />
-			<label for="lname">Last name:</label><br />
-			<input type="text" id="lname" name="lname" value="Doe" disabled /><br /><br />
-			<input type="submit" value="Submit" />
-		</form>
+<body>
+    <h2>HTML Forms</h2>
 
-		<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+    <form action="" method="get">
+        <label for="fname">First name:</label><br />
+        <input type="text" id="fname" name="wasim" value="John" /><br />
+        <label for="lname">Last name:</label><br />
+        <input type="text" id="lname" name="lname" value="Doe" disabled /><br /><br />
+        <input type="submit" value="Submit" />
+    </form>
 
-		<hr />
-		<h2>Radio Buttons</h2>
+    <p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
 
-		<p>Choose your favorite Web language:</p>
+    <hr />
+    <h2>Radio Buttons</h2>
 
-		<form>
-			  <input type="radio" id="html" name="fav_language" value="HTML" />   <label for="html">HTML</label><br />
-			  <input type="radio" id="css" name="fav_language" value="CSS" />   <label for="css">CSS</label><br />
-			  <input type="radio" id="javascript" name="fav_language" value="JavaScript" />   <label for="javascript">JavaScript</label>
-		</form>
-		<br />
-		<br />
-		<hr />
-		<h2>Check box</h2>
+    <p>Choose your favorite Web language:</p>
 
-		<form>
-			<input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" />
-			<label for="vehicle1"> I have a bike</label><br />
-			<input type="checkbox" id="vehicle2" name="vehicle2" value="Car" />
-			<label for="vehicle2"> I have a car</label><br />
-			<input type="checkbox" id="vehicle3" name="vehicle3" value="Boat" />
-			<label for="vehicle3"> I have a boat</label>
-		</form>
+    <form>
+        <input type="radio" id="html" name="fav_language" value="HTML" />   <label for="html">HTML</label><br />   <input type="radio" id="css" name="fav_language" value="CSS" />   <label for="css">CSS</label><br />   <input type="radio" id="javascript"
+            name="fav_language" value="JavaScript" />   <label for="javascript">JavaScript</label>
+    </form>
+    <br />
+    <br />
+    <hr />
+    <h2>Check box</h2>
 
-		<hr />
+    <form>
+        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" />
+        <label for="vehicle1"> I have a bike</label><br />
+        <input type="checkbox" id="vehicle2" name="vehicle2" value="Car" />
+        <label for="vehicle2"> I have a car</label><br />
+        <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat" />
+        <label for="vehicle3"> I have a boat</label>
+    </form>
 
-		<h3>Select</h3>
+    <hr />
 
-		<label for="cars">Choose a car:</label>
-		<select id="cars" name="cars">
+    <h3>Select</h3>
+
+    <label for="cars">Choose a car:</label>
+    <select id="cars" name="cars">
 			<option value="volvo">Volvo</option>
 			<option value="saab">Saab</option>
 			<option value="fiat">Fiat</option>
 			<option value="audi">Audi</option>
 		</select>
-		<hr />
+    <hr />
 
-		<h2>Text area</h2>
-		<textarea name="message" rows="10" cols="30">
+    <h2>Text area</h2>
+    <textarea name="message" rows="10" cols="30">
             The cat was playing in the garden.
             </textarea
 		>
