--- a/input/index.html
+++ b/input/index.html
@@ -4,7 +4,7 @@
 <body>
     <h2>HTML Forms</h2>
 
-    <form action="" method="get">
+    <form action="/ddddddd" method="get">
         <label for="fname">First name:</label><br />
         <input type="text" id="fname" name="wasim" value="John" /><br />
         <label for="lname">Last name:</label><br />
