--- a/list/list.html
+++ b/list/list.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="wasim" />
     <style>
-        table,
+        /* table,
         th,
         td {
             border: 1px solid black;
-        }
+        } */
     </style>
 </head>
 
 <body>
-
-    <h1>Introduction to List</h1>
+    <!-- <h1>Introduction to List</h1>
 
     <h3>My Favourite foods</h3>
     <ul>
@@ -49,50 +48,50 @@
         <dd>- Creating websites and web apps using js ,php</dd>
         <dt>Mobile</dt>
         <dd>- Creating apps using java ,kotlin</dd>
-    </dl>
+    </dl> -->
 
+    <table style="width: 100%">
+        <colgroup>
+            <col span="2" style="background-color: red" />
 
-    <!-- <table style="width: 100%">
-			<colgroup>
-				<col style="background-color: red" />
-				<col span="1" style="background-color: yellow" />
-				<!-- <col style="background-color: yellow" /> -->
-    <!-- </colgroup>
-    <caption>
-        Popular Ceo's
-    </caption>
-    <thead>
-        <tr>
-            <th>Company</th>
-            <th>Contact</th>
-            <th>Country</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Google</td>
-            <td>Sundar Pichai</td>
-            <td>Califonia</td>
-        </tr>
-        <tr>
-            <td>Tata</td>
-            <td>Ratan Tata</td>
-            <td>India</td>
-        </tr>
-        <tr>
-            <td>Tesla</td>
-            <td>Elon Musk</td>
-            <td>America</td>
-        </tr>
-    </tbody>
-    <tfoot>
-        <tr>
-            <td><img src="../head/images/example.png" height="20" width="20" />Sum</td>
-            <td>3</td>
-            <td>3</td>
-        </tr>
-    </tfoot>
-    </table> -->
+            <col style="background-color: red" />
+            <col span="2" style="background-color: yellow" />
+        </colgroup>
+        <caption>
+            Popular Ceo's
+        </caption>
+        <thead>
+            <tr>
+                <th>Company</th>
+                <th>Contact</th>
+                <th>Country</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Google</td>
+                <td>Sundar Pichai</td>
+                <td>Califonia</td>
+            </tr>
+            <tr>
+                <td>Tata</td>
+                <td>Ratan Tata</td>
+                <td>India</td>
+            </tr>
+            <tr>
+                <td>Tesla</td>
+                <td>Elon Musk</td>
+                <td>America</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td><img src="../head/images/example.png" height="20" width="20" />Sum</td>
+                <td>3</td>
+                <td>3</td>
+            </tr>
+        </tfoot>
+    </table>
 
     <!-- here we are using the object tag to achieve the plugin controll   -->
     <!-- <h3>Plugin entertainment</h3>
