--- a/list/list.html
+++ b/list/list.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title></title>
+    <title>List</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="wasim" />
     <style>
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <!-- <h1>Introduction to List</h1>
+    <h1>Introduction to List</h1>
 
     <h3>My Favourite foods</h3>
     <ul>
@@ -28,6 +28,18 @@
             </ol>
         </li>
     </ul>
+
+
+
+
+
+
+
+
+
+
+<!-- 
+
     <h3>Popular Sports in history</h3>
     <ol>
         <li>Football</li>
@@ -45,9 +57,11 @@
     <h3>Info about Web and Software Developemnt</h3>
     <dl>
         <dt>Web</dt>
-        <dd>- Creating websites and web apps using js ,php</dd>
+        <dd >  Creating websites and web apps using js ,php</dd>
+        <dt>Applicat</dt>
+        <dd>   Creating application and web apps using js ,php</dd>
         <dt>Mobile</dt>
-        <dd>- Creating apps using java ,kotlin</dd>
+        <dd>   Creating apps using java ,kotlin</dd>
     </dl> -->
 
     <table style="width: 100%">
