--- a/media/media.html
+++ b/media/media.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title></title>
+    <title>entertainement</title>
     <meta name="author" content="wasim" />
 </head>
 
@@ -9,9 +9,11 @@
     <h1>Audios and Videos</h1>
     <h3>Despacito music</h2>
         <audio controls>
-			<source src="./despacito.mp3" type="audio/mpeg" > 
+			<source src="../despacito.mp3" type="audio/mpeg" > 
 			Your browser does not support audio
 		</audio>
+        <br>
+        <br>
         <br>
         <br>
         <h3><i>kgf trailer</i></h3>
