--- a/head/basic.html
+++ b/head/basic.html
@@ -4,7 +4,7 @@
     <title>Quickly learn</title>
     <meta charset="utf-8" />
     <meta name="author" content="wasim" />
-    <meta http-equiv="refresh" content="277777;www.facebook.com" />
+    <meta http-equiv="refresh" content="200000;batch2.html" />
     <meta name="description" content="You can learn html by using this website. here wer 
         tell some basics of html" />
     <meta name="keywords" content="learn html, basic html" />
@@ -24,13 +24,7 @@
 			This is a <br />
 			paragraph with a line break.
 		</p> -->
-    <p>means the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans the
-        same asmeans the same asmeans the same asmeans the same asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as means the same
-        asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans
-        the same asmeans the same asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as means the same asmeans the same asmeans the
-        same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same
-        asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans
-        the same asmeans the same asmeans the same asmeans the same asmeans the same as means the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same asmeans the same as</p>
+    <p> 
     <!-- <p id="wasim">Hai</p> -->
     <!-- <script src="basic.js"></script> -->
     <!-- <a href="https://www.w3schools.com">Visit W3Schools</a> -->
